# Agente-Inteligente

./: .gitignore  README.md  theme_converter.py
backend/: add_col.py  fix_embeddings.py  pyproject.toml
backend/scripts/: alter_sale_db.py  check_db.py  cleanup_bad_data.py  clear_db.py  drain_queue.py  fix_db.py  generate_n8n_csv.py  list_products.py  migrate_db.py  seed_products.py  test_rbac.py  test_sale.py
backend/src/: main.py
backend/src/modules/auth/: dependencies.py  router.py  schemas.py  service.py
backend/src/modules/data_ingestion/: models.py  router.py
backend/src/modules/intelligence/: models.py  processor.py  router.py  service.py
backend/src/modules/interaction/: router.py  service.py
backend/src/modules/reports/: router.py  service.py
backend/src/shared/: database.py
frontend/: package-lock.json  package.json  vite.widget.config.js  widget-demo.html
frontend/dist-widget/: widget.umd.js
frontend/src/: App.css  App.jsx  index.css  widget.jsx
frontend/src/components/: ChatWidget.css  ChatWidget.jsx
frontend/src/entities/message/model/: types.js
frontend/src/entities/message/ui/: MessageBubble.jsx
frontend/src/features/chat/api/: chatApi.js
frontend/src/features/chat/ui/: ChatInput.jsx
frontend/src/pages/: AdminDashboard.jsx  HomePage.jsx  Login.jsx
frontend/src/shared/: authContext.jsx
frontend/src/shared/api/: axios.js
frontend/src/widgets/chat/ui/: ChatWindow.jsx
ops/: compose.yml  n8n_workflow_template.json
